Changes about me

--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
                 designing and building some web applications I think are pretty cool.
                 <br><br>
                 In the past I have worked as a business analyst developing cloud
-                banking software, and I was part of the team at Ohpen that migrated
+                banking software, and I was part of the team that migrated
                 the first bank in the world completely into the cloud.
                 <br><br>
                 I'm Dutch originally, but spent the majority of my childhood in Belgium.
-                I speak fluent Dutch and English and have a degree in Investment
+                I speak fluent Dutch and English and have a Bachelors degree in Investment
                 and Financial Risk Management from Cass Business School in London.
                 <br><br>
                 Feel free to check out some more information about me in the
