Adds KPYR section and updates some text

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                   <div>
                     <h3>Professional Sailor</h3>
                     <h4>Team Maverick</h4>
-                    <p>Joined the team to help build the boat, then extensively
+                    <p>Joined the team to help build and maintain the boat, and extensively
                       campaigned it in the Mediterranean, Caribbean, and the UK.
                       Achieved class wins in the Rolex Middle Sea Race and the RORC
                       Transatlantic Race</p>
@@ -113,6 +113,30 @@
               <hr>
               <div class="flex-box flex-between">
                 <span>September 2015 - Present</span>
+                <span>Global</span>
+              </div>
+            </div>
+            <!-- KPYR -->
+            <div class="experience-box">
+              <div class="flex-box">
+                <div class="flex-box flex-vertical-center flex-auto-width">
+                  <div>
+                    <h3>Professional Sailor</h3>
+                    <h4>Kees Postma Yacht Racing</h4>
+                    <p>Involvement in various sailing campaigns both on and
+                      offshore, most notably working as shore-crew for Team
+                      Brunel in Alicante and Lisbon during the 2014-15
+                      Volvo Ocean Race and racing on the famous J5 Ranger
+                      in St.Barth and Newport.
+                    </p>
+                  </div>
+                </div>
+                <div class="company-icon-box" style="">
+                </div>
+              </div>
+              <hr>
+              <div class="flex-box flex-between">
+                <span>September 2014 - Present</span>
                 <span>Global</span>
               </div>
             </div>
