Adds CV downloads

--- a/index.html
+++ b/index.html
@@ -443,6 +443,25 @@
               </div>
             </div>
           </div>
+          <!-- CV -->
+          <div id="education" class="info-container">
+            <h2>Education</h2>
+            <div class="download-container flex-box flex-around">
+              <a href="resources/cv_kees_postma.pdf">
+                <div class="download">
+                  <h3>Conventional CV</h3>
+                  <p>Click to view</p>
+                </div>
+              </a>
+              <a href="resources/sailing_cv_kees_postma.pdf">
+                <div class="download">
+                  <h3>Sailing CV</h3>
+                  <p>Click to view</p>
+                </div>
+              </a>
+            </div>
+          </div>
+          <!-- Bottom of page space -->
           <div class="space">
           </div>
         </div>
