Reformats CV downloads

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         				<a href="#stack" class="nav-tab"><li>Tech stack</li></a>
         				<a href="#projects" class="nav-tab"><li>Side projects</li></a>
                 <a href="#education" class="nav-tab"><li>Education</li></a>
+                <a href="#downloads" class="nav-tab"><li>Downloads</li></a>
         			</ul>
         		</nav>
           </div>
@@ -443,24 +444,35 @@
               </div>
             </div>
           </div>
-          <!-- CV -->
-          <div id="education" class="info-container">
-            <h2>Education</h2>
-            <div class="download-container flex-box flex-around">
-              <a href="resources/cv_kees_postma.pdf">
+
+          <!-- Downloads -->
+          <div id="downloads" class="info-container">
+            <div class="downloads-container">
+              <h2>Downloads</h2>
+              <h3>CV</h3>
+              <hr>
+              <!-- Conventional CV -->
+              <a href="resources/cv_kees_postma.pdf" target="_blank">
                 <div class="download">
-                  <h3>Conventional CV</h3>
-                  <p>Click to view</p>
+                  <h4>Conventional CV</h3>
+                  <p>Last updated on 18 July 2017</p>
                 </div>
               </a>
-              <a href="resources/sailing_cv_kees_postma.pdf">
+              <!-- Sailing CV -->
+              <a href="resources/sailing_cv_kees_postma.pdf" target="_blank">
                 <div class="download">
-                  <h3>Sailing CV</h3>
-                  <p>Click to view</p>
+                  <h4>Sailing CV</h4>
+                  <p>Last updated on 18 July 2017</p>
                 </div>
               </a>
             </div>
           </div>
+
+          <!-- Features -->
+          <!-- <div class="info-container">
+            <h2>Features</h2>
+          </div> -->
+
           <!-- Bottom of page space -->
           <div class="space">
           </div>
