--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         				<a href="#projects" class="nav-tab"><li>Side projects</li></a>
                 <a href="#education" class="nav-tab"><li>Education</li></a>
                 <a href="#downloads" class="nav-tab"><li>Downloads</li></a>
+                <a href="#features" class="nav-tab"><li>Sailing features</li></a>
         			</ul>
         		</nav>
           </div>
@@ -48,27 +49,27 @@
             <p> For the past three years I have been pursuing a career in yacht
                 racing, with an ultimate ambition of competing in and winning
                 the Volvo Ocean Race. To me, offshore yacht racing is the
-                ultimate combination of competition, adventure, and challenge.
+                ultimate combination of competition, challenge, and adventure.
                 <br><br>
                 Next to sailing I’m also a junior-level full stack web developer.
                 I love solving challenging problems and in my free time I enjoy
                 designing and building some web applications I think are pretty cool.
-                <br><br>
                 In the past I have worked as a business analyst developing cloud
                 banking software, and I was part of the team that migrated
                 the first bank in the world completely into the cloud.
-                <br><br>
-                I'm Dutch originally, but spent the majority of my childhood in Belgium.
-                I speak fluent Dutch and English and have a Bachelors degree in Investment
-                and Financial Risk Management from Cass Business School in London.
                 <br><br>
                 Feel free to check out some more information about me in the
                 sections below and if you're interested in working together,
                 please get in touch!
                 <br><br>
-                <strong>+44 (0)74 0772 1911</strong>
-                <br>
-                <strong>kk.postma@gmail.com</strong>
+                <div class="flex-box flex-around">
+                  <div class="contact-info">
+                    <i class="fa fa-phone"></i><span> +44 (0)74 0772 1911</span>
+                  </div>
+                  <div class="contact-info">
+                    <i class="fa fa-envelope"></i><span> kk.postma@gmail.com</span>
+                  </div>
+                </div>
             </p>
           </div>
 
@@ -449,8 +450,8 @@
           <div id="downloads" class="info-container">
             <div class="downloads-container">
               <h2>Downloads</h2>
-              <h3>CV</h3>
-              <hr>
+              <!-- <h3>CV</h3>
+              <hr> -->
               <!-- Conventional CV -->
               <a href="resources/cv_kees_postma.pdf" target="_blank">
                 <div class="download">
@@ -469,9 +470,43 @@
           </div>
 
           <!-- Features -->
-          <!-- <div class="info-container">
-            <h2>Features</h2>
-          </div> -->
+          <div id="features" class="info-container">
+            <h2>Sailing features</h2>
+            <div class="features-container">
+              <h3>Blogs</h3>
+              <hr>
+              <a href="https://www.maverick49.com/news-2/kees-postma-rorc-transatlantic-blog-day-8" target="_blank">
+                <div class="download">
+                  <h4>RORC Transatlantic Race blog: Day 8</h4>
+                </div>
+              </a>
+              <a href="https://www.maverick49.com/news-2/kees-postma-rorc-transatlantic-blog" target="_blank">
+                <div class="download">
+                  <h4>RORC Transatlantic Race blog: Day 5</h4>
+                </div>
+              </a>
+            </div>
+            <div class="features-container" id="videos">
+            <h3>Videos</h3>
+            <hr>
+              <div class="video-box">
+                <h3>Round the Island Race 2017 review</h3>
+                <iframe src="https://www.youtube.com/embed/DZ4roQPp6yw" frameborder="0" allowfullscreen></iframe>
+              </div>
+              <div class="video-box">
+                <h3>Pre-Middle Sea Race 2016 interview (4:00)</h3>
+                <iframe src="https://www.youtube.com/embed/XslqaK0V-lc" frameborder="0" allowfullscreen></iframe>
+              </div>
+              <div class="video-box">
+                <h3>Maverick below-deck tour</h3>
+                <iframe src="https://www.youtube.com/embed/X6GDv2wNasE" frameborder="0" allowfullscreen></iframe>
+              </div>
+              <div class="video-box">
+                <h3>Pre-Rolex Giraglia Cup 2016 interview</h3>
+                <iframe src="https://www.youtube.com/embed/bnsmSMZ2LDs" frameborder="0" allowfullscreen></iframe>
+              </div>
+            </div>
+          </div>
 
           <!-- Bottom of page space -->
           <div class="space">
