Changes about me slightly. Adds Le Wagon to work experience

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 the Volvo Ocean Race. To me, offshore yacht racing is the
                 ultimate combination of competition, challenge, and adventure.
                 <br><br>
-                Next to sailing I’m also a junior-level full stack web developer.
+                Next to sailing I’m also a full stack web developer.
                 I love solving challenging problems and in my free time I enjoy
                 designing and building some web applications I think are pretty cool.
                 In the past I have worked as a business analyst developing cloud
@@ -88,7 +88,7 @@
           <div id="experience" class="info-container">
             <h2>Experience</h2>
             <!-- Le Wagon -->
-            <!-- <div class="experience-box">
+            <div class="experience-box">
               <div class="flex-box">
                 <div class="flex-box flex-vertical-center flex-auto-width">
                   <div>
@@ -106,7 +106,7 @@
                 <span>August 2017</span>
                 <span>London, UK</span>
               </div>
-            </div> -->
+            </div>
             <!-- Team Maverick -->
             <div class="experience-box">
               <div class="flex-box">
