--- a/index.html
+++ b/index.html
@@ -93,13 +93,17 @@
                 <div class="flex-box flex-vertical-center flex-auto-width">
                   <div>
                     <h3>Teaching Assistant</h3>
-                    <h4>Le Wagon</h4>
-                    <p>Occasional work, helping students at Le Wagon through their
-                      daily coding challenges and with their final projects.</p>
+                    <a href="https://www.lewagon.com/" target="_blank"><h4>Le Wagon</h4></a>
+                    <p>Freelance work helping students at Le Wagon, a 9-week
+                      full-stack web development bootcamp, through their daily
+                      challenges by troubleshooting issues and explaining
+                      concepts.</p>
                   </div>
                 </div>
-                <div class="company-icon-box" style="background-image: url(images/lewagon.png);">
-                </div>
+                <a href="https://www.lewagon.com/" target="_blank">
+                  <div class="company-icon-box" style="background-image: url(images/lewagon.png);">
+                  </div>
+                </a>
               </div>
               <hr>
               <div class="flex-box flex-between">
@@ -113,15 +117,17 @@
                 <div class="flex-box flex-vertical-center flex-auto-width">
                   <div>
                     <h3>Professional Sailor</h3>
-                    <h4>Team Maverick</h4>
+                    <a href="https://www.maverick49.com/" target="_blank"><h4>Team Maverick</h4></a>
                     <p>Joined the team to help build and maintain the boat, and extensively
                       campaigned it in the Mediterranean, Caribbean, and the UK.
                       Achieved class wins in the Rolex Middle Sea Race and the RORC
                       Transatlantic Race</p>
                   </div>
                 </div>
-                <div class="company-icon-box" style="background-image: url(images/maverick.jpeg);">
-                </div>
+                <a href="https://www.maverick49.com/" target="_blank">
+                  <div class="company-icon-box" style="background-image: url(images/maverick.jpeg);">
+                  </div>
+                </a>
               </div>
               <hr>
               <div class="flex-box flex-between">
@@ -136,7 +142,7 @@
                   <div>
                     <h3>Professional Sailor</h3>
                     <h4>Kees Postma Yacht Racing</h4>
-                    <p>Involvement in various sailing campaigns both on and
+                    <p>Involvement in various sailing campaigns both onshore and
                       offshore, most notably working as shore-crew for Team
                       Brunel in Alicante and Lisbon during the 2014-15
                       Volvo Ocean Race and racing on the famous J5 Ranger
@@ -159,15 +165,17 @@
                 <div class="flex-box flex-vertical-center flex-auto-width">
                   <div>
                     <h3>Global Brand Ambassador</h3>
-                    <h4>Garmin</h4>
+                    <a href="https://www.garmin.com/en-GB" target="_blank"><h4>Garmin</h4></a>
                     <p>Represented the global leader in satellite navigation
-                      during the Clipper Round the World Yacht Race. Created
-                      content in the form of blogs, photography and video, and
-                      hosted corporate relations on sailing days</p>
+                      during the Clipper Round the World Yacht Race through
+                      blogs, digital content, and hosting corporate relations
+                      on sailing days.</p>
                   </div>
                 </div>
-                <div class="company-icon-box" style="background-image: url(images/garmin.png);">
-                </div>
+                <a href="https://www.garmin.com/en-GB" target="_blank">
+                  <div class="company-icon-box" style="background-image: url(images/garmin.png);">
+                  </div>
+                </a>
               </div>
               <hr>
               <div class="flex-box flex-between">
@@ -181,15 +189,17 @@
                 <div class="flex-box flex-vertical-center flex-auto-width">
                   <div>
                     <h3>Circumnavigator</h3>
-                    <h4>Clipper Round the World Yacht Race</h4>
-                    <p>Spotted a posted on the London Underground Signed up to
-                      the race having never sailed before and subsequently
+                    <a href="https://www.clipperroundtheworld.com/" target="_blank"><h4>Clipper Round the World Yacht Race</h4></a>
+                    <p>Spotted a posted on the London Underground and signed up to
+                      the race having never sailed before. Subsequently
                       completed the 55,000-mile circumnavigation as watch
-                      captain and second-in-command</p>
+                      captain and second-in-command.</p>
                   </div>
                 </div>
-                <div class="company-icon-box" style="background-image: url(images/clipper.jpeg);">
-                </div>
+                <a href="https://www.clipperroundtheworld.com/" target="_blank">
+                  <div class="company-icon-box" style="background-image: url(images/clipper.jpeg);">
+                  </div>
+                </a>
               </div>
               <hr>
               <div class="flex-box flex-between">
@@ -203,15 +213,18 @@
                 <div class="flex-box flex-vertical-center flex-auto-width">
                   <div>
                     <h3>Business Analyst</h3>
-                    <h4>Ohpen</h4>
+                    <a href="http://www.ohpen.com/" target="_blank"><h4>Ohpen</h4></a>
                     <p>Returned to the company full-time after finishing
-                      university and a successful internship in 2011. Worked
-                      closely with developers in writing functional
-                      specifications and testing new releases.</p>
+                      university and a successful internship in 2011. Translated
+                      business requirements into functional specifications for
+                      the Ohpen core-banking platform and co-wrote the process
+                      that put the first bank in the world fully into the cloud.</p>
                   </div>
                 </div>
-                <div class="company-icon-box" style="background-image: url(images/ohpen.png);">
-                </div>
+                <a href="http://www.ohpen.com/" target="_blank">
+                  <div class="company-icon-box" style="background-image: url(images/ohpen.png);">
+                  </div>
+                </a>
               </div>
               <hr>
               <div class="flex-box flex-between">
@@ -225,15 +238,17 @@
                 <div class="flex-box flex-vertical-center flex-auto-width">
                   <div>
                     <h3>Trainee Junior Consultant</h3>
-                    <h4>Coresta Group</h4>
-                    <p>Returned for a second summer internship assisting
-                      management with finding investors. Achieved a significant
-                      improvement in operational efficiency by streamlining
-                      spreadsheets using VBA.</p>
+                    <a href="http://www.coresta.nl/" target="_blank"><h4>Coresta</h4></a>
+                    <p>Returned for a second summer internship during which I
+                      pitched real estate investment funds to potential investors
+                      and achieved a significant improvement in operational efficiency
+                      by streamlining Excel spreadsheets using VBA.</p>
                   </div>
                 </div>
-                <div class="company-icon-box" style="background-image: url(images/coresta.png);">
-                </div>
+                <a href="http://www.coresta.nl/" target="_blank">
+                  <div class="company-icon-box" style="background-image: url(images/coresta.png);">
+                  </div>
+                </a>
               </div>
               <hr>
               <div class="flex-box flex-between">
@@ -247,15 +262,16 @@
                 <div class="flex-box flex-vertical-center flex-auto-width">
                   <div>
                     <h3>Summer Intern</h3>
-                    <h4>Ohpen</h4>
-                    <p>Started in Operations processing investment transactions
-                      and conducting portfolio research for clients. Progressed
-                      to the development team and assisted in writing functional
-                      specifications for new software.</p>
+                    <a href="http://www.ohpen.com/" target="_blank"><h4>Ohpen</h4></a>
+                    <p>Started out processing transactions in operations, then
+                      wrote functional specifications of improvements and new
+                      features for the company’s cloud-based core-banking platform.</p>
                   </div>
                 </div>
-                <div class="company-icon-box" style="background-image: url(images/ohpen.png);">
-                </div>
+                <a href="http://www.ohpen.com/" target="_blank">
+                  <div class="company-icon-box" style="background-image: url(images/ohpen.png);">
+                  </div>
+                </a>
               </div>
               <hr>
               <div class="flex-box flex-between">
@@ -269,14 +285,16 @@
                 <div class="flex-box flex-vertical-center flex-auto-width">
                   <div>
                     <h3>Trainee Junior Consultant</h3>
-                    <h4>Coresta Group</h4>
-                    <p>Carried out detailed cash flow analysis for the firm’s
-                      own new real estate funds and conducted market and
-                      financial analysis on clients’ prospective developments</p>
+                    <a href="http://www.coresta.nl/" target="_blank"><h4>Coresta</h4></a>
+                    <p>Executed cash flow analysis for new real estate investment
+                      funds and conducted market and financial analysis on clients’
+                      prospective developments.</p>
                   </div>
                 </div>
-                <div class="company-icon-box" style="background-image: url(images/coresta.png);">
-                </div>
+                <a href="http://www.coresta.nl/" target="_blank">
+                  <div class="company-icon-box" style="background-image: url(images/coresta.png);">
+                  </div>
+                </a>
               </div>
               <hr>
               <div class="flex-box flex-between">
@@ -320,6 +338,7 @@
                   <h4>Rails</h4>
                 </div>
               </div>
+              <!-- Libraries -->
               <h3>Libraries</h3>
               <hr>
               <div class="code-container">
@@ -336,6 +355,7 @@
                   <h4>React</h4>
                 </div>
               </div>
+              <!-- Database -->
               <h3>Database</h3>
               <hr>
               <div class="code-container">
@@ -351,17 +371,6 @@
           <div id="projects" class="info-container">
             <h2>Side projects</h2>
             <div class="project-box flex-box">
-              <div class="project-thumbnail" style="background-image: url(images/fixes.jpg);"></div>
-              <div class="project-info">
-                <a href="http://www.playfixes.com" target="_blank">
-                  <h3>playfixes.com</h3>
-                </a>
-                <p>A word game founded by some of my classmates at Le Wagon’s
-                  coding bootcamp. After the course I started working with the
-                  Fixes team to make the game even better.</p>
-              </div>
-            </div>
-            <div class="project-box flex-box">
               <div class="project-thumbnail" style="background-image: url(images/brainpowered.jpg);"></div>
               <div class="project-info">
                 <a href="http://www.brainpowered.me"  target="_blank">
@@ -370,17 +379,6 @@
                 <p>Together with two of my classmates at Le Wagon we built and
                    launched this web app within 10 working days. Students can
                    contribute to real projects by real companies and have a better chance at getting hired.</p>
-              </div>
-            </div>
-            <div class="project-box flex-box">
-              <div class="project-thumbnail" style="background-image: url(images/cocktail.jpg);"></div>
-              <div class="project-info">
-                <a href="http://mr-cocktail-kp09.herokuapp.com"  target="_blank">
-                  <h3>mr-cocktail-kp09.herokuapp.com</h3>
-                </a>
-                <p>A fun app I built for my girlfriend and I, where we can
-                   store cocktail recipes that we have made and like and share
-                   them with friends.</p>
               </div>
             </div>
           </div>
