Adds more blogs and articles

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         				<a href="#projects" class="nav-tab"><li>Side projects</li></a>
                 <a href="#education" class="nav-tab"><li>Education</li></a>
                 <a href="#downloads" class="nav-tab"><li>Downloads</li></a>
-                <a href="#features" class="nav-tab"><li>Sailing features</li></a>
+                <a href="#features" class="nav-tab"><li>Features and links</li></a>
         			</ul>
         		</nav>
           </div>
@@ -308,13 +308,22 @@
           <div id="stack" class="info-container">
             <h2>Tech stack</h2>
             <div class="tech-stack">
-              <!-- Languages -->
-              <h3>Languages</h3>
-              <hr>
               <div class="code-container">
                 <div class="code-box">
                   <img class="code-icon" src="images/ruby.png" alt="">
                   <h4>Ruby</h4>
+                </div>
+                <div class="code-box">
+                  <img class="code-icon" src="images/rails.png" alt="">
+                  <h4>Rails</h4>
+                </div>
+                <div class="code-box">
+                  <img class="code-icon" src="images/postgresql.png" alt="">
+                  <h4>PostgreSQL</h4>
+                </div>
+                <div class="code-box">
+                  <img class="code-icon" src="images/heroku.png" alt="">
+                  <h4>Heroku</h4>
                 </div>
                 <div class="code-box">
                   <img class="code-icon" src="images/html.png" alt="">
@@ -325,23 +334,13 @@
                   <h4>CSS</h4>
                 </div>
                 <div class="code-box">
+                  <img class="code-icon" src="images/scss.png" alt="">
+                  <h4>SCSS</h4>
+                </div>
+                <div class="code-box">
                   <img class="code-icon" src="images/javascript.png" alt="">
                   <h4>Javascript</h4>
                 </div>
-              </div>
-              <!-- Frameworks -->
-              <h3>Frameworks</h3>
-              <hr>
-              <div class="code-container">
-                <div class="code-box">
-                  <img class="code-icon" src="images/rails.png" alt="">
-                  <h4>Rails</h4>
-                </div>
-              </div>
-              <!-- Libraries -->
-              <h3>Libraries</h3>
-              <hr>
-              <div class="code-container">
                 <div class="code-box">
                   <img class="code-icon" src="images/bootstrap.png" alt="">
                   <h4>Bootstrap</h4>
@@ -354,14 +353,13 @@
                   <img class="code-icon" src="images/react.png" alt="">
                   <h4>React</h4>
                 </div>
-              </div>
-              <!-- Database -->
-              <h3>Database</h3>
-              <hr>
-              <div class="code-container">
                 <div class="code-box">
-                  <img class="code-icon" src="images/postgresql.png" alt="">
-                  <h4>PostgreSQL</h4>
+                  <img class="code-icon" src="images/git.png" alt="">
+                  <h4>Git</h4>
+                </div>
+                <div class="code-box">
+                  <img class="code-icon" src="images/github.png" alt="">
+                  <h4>GitHub</h4>
                 </div>
               </div>
             </div>
@@ -393,7 +391,7 @@
                   <div>
                     <h3>Full-stack web development bootcamp</h3>
                     <h4>Le Wagon</h4>
-                    <p>Succesfully completed the nine-week full-stack web development
+                    <p>Completed the nine-week full-stack web development
                       bootcamp and launched a complete MVP within 10 working days.</p>
                   </div>
                 </div>
@@ -432,7 +430,7 @@
                   <div>
                     <h3>International Baccalaureate Diploma</h3>
                     <h4>Antwerp International School</h4>
-                    <p>Obtained the IB Diploma scoring 42 out of 45 points</p>
+                    <p>Obtained the IB Diploma scoring 42 out of 45 points.</p>
                   </div>
                 </div>
                 <div class="company-icon-box" style="background-image: url(images/ais.png);">
@@ -471,18 +469,36 @@
 
           <!-- Features -->
           <div id="features" class="info-container">
-            <h2>Sailing features</h2>
+            <h2>Features</h2>
+            <div class="features-container">
+              <h3>Articles</h3>
+              <hr>
+              <a href="https://clipperroundtheworld.com/news/archive-article/student-set-to-circumnavigate-the-globe" target="_blank">
+                <div class="download">
+                  <h4>Student set to circumnavigate the globe</h4>
+                  <p>May 2013</p>
+                </div>
+              </a>
+            </div>
             <div class="features-container">
               <h3>Blogs</h3>
               <hr>
               <a href="https://www.maverick49.com/news-2/kees-postma-rorc-transatlantic-blog-day-8" target="_blank">
                 <div class="download">
                   <h4>RORC Transatlantic Race blog: Day 8</h4>
+                  <p>December 2016</p>
                 </div>
               </a>
               <a href="https://www.maverick49.com/news-2/kees-postma-rorc-transatlantic-blog" target="_blank">
                 <div class="download">
                   <h4>RORC Transatlantic Race blog: Day 5</h4>
+                  <p>November 2016</p>
+                </div>
+              </a>
+              <a href="https://www.garmin.com/en-GB/blog/clipper-race-round-up-from-kees-postma/" target="_blank">
+                <div class="download">
+                  <h4>Garmin: Clipper Round the World Yacht Race round up</h4>
+                  <p>July 2014</p>
                 </div>
               </a>
             </div>
