--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
             </div>
             <nav class="nav-container">
         			<ul class="nav-list">
-        				<a class="nav-tab active" href="#about"><li>About me</li></a>
-        				<a href="#experience" class="nav-tab"><li>Experience</li></a>
+        				<a class="nav-tab active" href="#about"><li>This is me</li></a>
+        				<a href="#experience" class="nav-tab"><li>Where I've worked</li></a>
         				<a href="#stack" class="nav-tab"><li>Tech stack</li></a>
-        				<a href="#projects" class="nav-tab"><li>Side projects</li></a>
+        				<a href="#projects" class="nav-tab"><li>On the side</li></a>
                 <a href="#education" class="nav-tab"><li>Education</li></a>
                 <a href="#downloads" class="nav-tab"><li>Downloads</li></a>
-                <a href="#features" class="nav-tab"><li>Features and links</li></a>
+                <a href="#links" class="nav-tab"><li>Other cool stuff</li></a>
         			</ul>
         		</nav>
           </div>
@@ -56,7 +56,7 @@
 
           <!-- About me -->
           <div id="about" class="info-container">
-            <h2>About me</h2>
+            <h2>This is me</h2>
             <p> For the past three years I have been pursuing a career in yacht
                 racing, with an ultimate ambition of competing in and winning
                 the Volvo Ocean Race. To me, offshore yacht racing is the
@@ -86,7 +86,7 @@
 
           <!-- Professional experience -->
           <div id="experience" class="info-container">
-            <h2>Experience</h2>
+            <h2>Where I've worked</h2>
             <!-- Le Wagon -->
             <div class="experience-box">
               <div class="flex-box">
@@ -121,7 +121,7 @@
                     <p>Joined the team to help build and maintain the boat, and extensively
                       campaigned it in the Mediterranean, Caribbean, and the UK.
                       Achieved class wins in the Rolex Middle Sea Race and the RORC
-                      Transatlantic Race</p>
+                      Transatlantic Race.</p>
                   </div>
                 </div>
                 <a href="https://www.maverick49.com/" target="_blank">
@@ -167,7 +167,7 @@
                     <h3>Global Brand Ambassador</h3>
                     <a href="https://www.garmin.com/en-GB" target="_blank"><h4>Garmin</h4></a>
                     <p>Represented the global leader in satellite navigation
-                      during the Clipper Round the World Yacht Race through
+                      and official supplier of the Clipper Round the World Yacht Race through
                       blogs, digital content, and hosting corporate relations
                       on sailing days.</p>
                   </div>
@@ -192,8 +192,8 @@
                     <a href="https://www.clipperroundtheworld.com/" target="_blank"><h4>Clipper Round the World Yacht Race</h4></a>
                     <p>Spotted a posted on the London Underground and signed up to
                       the race having never sailed before. Subsequently
-                      completed the 55,000-mile circumnavigation as watch
-                      captain and second-in-command.</p>
+                      completed the 55,000-mile, 11-month circumnavigation as watch
+                      captain and second-in-command and gained extensive experience in people and crisis management.</p>
                   </div>
                 </div>
                 <a href="https://www.clipperroundtheworld.com/" target="_blank">
@@ -214,11 +214,13 @@
                   <div>
                     <h3>Business Analyst</h3>
                     <a href="http://www.ohpen.com/" target="_blank"><h4>Ohpen</h4></a>
-                    <p>Returned to the company full-time after finishing
-                      university and a successful internship in 2011. Translated
+                    <p>Returned to the company full-time after a successful
+                      internship in 2011 and finishing university. Translated
                       business requirements into functional specifications for
-                      the Ohpen core-banking platform and co-wrote the process
-                      that put the first bank in the world fully into the cloud.</p>
+                      the Ohpen core-banking platform, including the adaptation
+                      to the US Foreign Account Tax Compliance Act.
+                      I slso co-wrote the migration procedure that moved the first bank
+                      in the world fully into the cloud.</p>
                   </div>
                 </div>
                 <a href="http://www.ohpen.com/" target="_blank">
@@ -308,6 +310,8 @@
           <div id="stack" class="info-container">
             <h2>Tech stack</h2>
             <div class="tech-stack">
+              <h3>What I know</h3>
+              <hr>
               <div class="code-container">
                 <div class="code-box">
                   <img class="code-icon" src="images/ruby.png" alt="">
@@ -350,10 +354,6 @@
                   <h4>jQuery</h4>
                 </div>
                 <div class="code-box">
-                  <img class="code-icon" src="images/react.png" alt="">
-                  <h4>React</h4>
-                </div>
-                <div class="code-box">
                   <img class="code-icon" src="images/git.png" alt="">
                   <h4>Git</h4>
                 </div>
@@ -362,12 +362,32 @@
                   <h4>GitHub</h4>
                 </div>
               </div>
+              <h3>What I'm learning right now</h3>
+              <hr>
+              <div class="code-container">
+                <div class="code-box">
+                  <img class="code-icon" src="images/react.png" alt="">
+                  <h4>React</h4>
+                </div>
+                <div class="code-box">
+                  <img class="code-icon" src="images/rspec.png" alt="">
+                  <h4>RSpec</h4>
+                </div>
+                <div class="code-box">
+                  <img class="code-icon" src="images/redis.png" alt="">
+                  <h4>Redis</h4>
+                </div>
+                <div class="code-box">
+                  <img class="code-icon" src="images/sidekiq.jpg" alt="">
+                  <h4>Sidekiq</h4>
+                </div>
+              </div>
             </div>
           </div>
 
           <!-- Side projects -->
           <div id="projects" class="info-container">
-            <h2>Side projects</h2>
+            <h2>Projects</h2>
             <div class="project-box flex-box">
               <div class="project-thumbnail" style="background-image: url(images/brainpowered.jpg);"></div>
               <div class="project-info">
@@ -375,8 +395,9 @@
                   <h3>brainpowered.me</h3>
                 </a>
                 <p>Together with two of my classmates at Le Wagon we built and
-                   launched this web app within 10 working days. Students can
-                   contribute to real projects by real companies and have a better chance at getting hired.</p>
+                   launched this MVP within 10 working days. Students can
+                   contribute to real projects by real companies and have a
+                   better chance at getting hired.</p>
               </div>
             </div>
           </div>
@@ -390,13 +411,15 @@
                 <div class="flex-box flex-vertical-center flex-auto-width">
                   <div>
                     <h3>Full-stack web development bootcamp</h3>
-                    <h4>Le Wagon</h4>
+                    <a href="https://www.lewagon.com/" target="_blank"><h4>Le Wagon</h4></a>
                     <p>Completed the nine-week full-stack web development
                       bootcamp and launched a complete MVP within 10 working days.</p>
                   </div>
                 </div>
-                <div class="company-icon-box" style="background-image: url(images/lewagon.png);">
-                </div>
+                <a href="https://www.lewagon.com/" target="_blank">
+                  <div class="company-icon-box" style="background-image: url(images/lewagon.png);">
+                  </div>
+                </a>
               </div>
               <hr>
               <div class="flex-box flex-between">
@@ -410,12 +433,14 @@
                 <div class="flex-box flex-vertical-center flex-auto-width">
                   <div>
                     <h3>BSc Investment and Financial Risk Management</h3>
-                    <h4>Cass Business School</h4>
+                    <a href="http://www.cass.city.ac.uk/" target="_blank"><h4>Cass Business School</h4></a>
                     <p>Graduated with 1st class degree with Honours.</p>
                   </div>
                 </div>
-                <div class="company-icon-box" style="background-image: url(images/cass.png);">
-                </div>
+                <a href="http://www.cass.city.ac.uk/" target="_blank">
+                  <div class="company-icon-box" style="background-image: url(images/cass.png);">
+                  </div>
+                </a>
               </div>
               <hr>
               <div class="flex-box flex-between">
@@ -429,12 +454,14 @@
                 <div class="flex-box flex-vertical-center flex-auto-width">
                   <div>
                     <h3>International Baccalaureate Diploma</h3>
-                    <h4>Antwerp International School</h4>
+                    <a href="https://www.ais-antwerp.be/" target="_blank"><h4>Antwerp International School</h4></a>
                     <p>Obtained the IB Diploma scoring 42 out of 45 points.</p>
                   </div>
                 </div>
-                <div class="company-icon-box" style="background-image: url(images/ais.png);">
-                </div>
+                <a href="https://www.ais-antwerp.be/" target="_blank">
+                  <div class="company-icon-box" style="background-image: url(images/ais.png);">
+                  </div>
+                </a>
               </div>
               <hr>
               <div class="flex-box flex-between">
@@ -468,20 +495,10 @@
           </div>
 
           <!-- Features -->
-          <div id="features" class="info-container">
-            <h2>Features</h2>
-            <div class="features-container">
-              <h3>Articles</h3>
-              <hr>
-              <a href="https://clipperroundtheworld.com/news/archive-article/student-set-to-circumnavigate-the-globe" target="_blank">
-                <div class="download">
-                  <h4>Student set to circumnavigate the globe</h4>
-                  <p>May 2013</p>
-                </div>
-              </a>
-            </div>
-            <div class="features-container">
-              <h3>Blogs</h3>
+          <div id="links" class="info-container">
+            <h2>Other cool stuff</h2>
+            <div class="links-container">
+              <h3>Articles & Blogs</h3>
               <hr>
               <a href="https://www.maverick49.com/news-2/kees-postma-rorc-transatlantic-blog-day-8" target="_blank">
                 <div class="download">
@@ -497,12 +514,18 @@
               </a>
               <a href="https://www.garmin.com/en-GB/blog/clipper-race-round-up-from-kees-postma/" target="_blank">
                 <div class="download">
-                  <h4>Garmin: Clipper Round the World Yacht Race round up</h4>
+                  <h4>Clipper Race round up from Kees Postma</h4>
                   <p>July 2014</p>
                 </div>
               </a>
+              <a href="https://clipperroundtheworld.com/news/archive-article/student-set-to-circumnavigate-the-globe" target="_blank">
+                <div class="download">
+                  <h4>Student set to circumnavigate the globe</h4>
+                  <p>May 2013</p>
+                </div>
+              </a>
             </div>
-            <div class="features-container" id="videos">
+            <div class="links-container" id="videos">
             <h3>Videos</h3>
             <hr>
               <div class="video-box">
