--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
             <nav class="nav-container">
         			<ul class="nav-list">
         				<a class="nav-tab active" href="#about"><li>This is me</li></a>
-        				<a href="#experience" class="nav-tab"><li>Where I've worked</li></a>
+        				<a href="#experience" class="nav-tab"><li>Professional experience</li></a>
         				<a href="#stack" class="nav-tab"><li>Tech stack</li></a>
-        				<a href="#projects" class="nav-tab"><li>On the side</li></a>
+        				<a href="#projects" class="nav-tab"><li>Projects</li></a>
                 <a href="#education" class="nav-tab"><li>Education</li></a>
                 <a href="#downloads" class="nav-tab"><li>Downloads</li></a>
-                <a href="#links" class="nav-tab"><li>Other cool stuff</li></a>
+                <a href="#links" class="nav-tab"><li>Cool sailing stuff</li></a>
         			</ul>
         		</nav>
           </div>
@@ -57,36 +57,49 @@
           <!-- About me -->
           <div id="about" class="info-container">
             <h2>This is me</h2>
-            <p> For the past three years I have been pursuing a career in yacht
-                racing, with an ultimate ambition of competing in and winning
-                the Volvo Ocean Race. To me, offshore yacht racing is the
-                ultimate combination of competition, challenge, and adventure.
-                <br><br>
-                Next to sailing I’m also a full stack web developer.
-                I love solving challenging problems and in my free time I enjoy
-                designing and building some web applications I think are pretty cool.
-                In the past I have worked as a business analyst developing cloud
-                banking software, and I was part of the team that migrated
-                the first bank in the world completely into the cloud.
-                <br><br>
-                Feel free to check out some more information about me in the
-                sections below and if you're interested in working together,
-                please get in touch!
-                <br><br>
-                <div class="flex-box flex-around">
-                  <div class="contact-info">
-                    <i class="fa fa-phone"></i><span> +44 (0)74 0772 1911</span>
-                  </div>
-                  <div class="contact-info">
-                    <i class="fa fa-envelope"></i><span> kk.postma@gmail.com</span>
-                  </div>
-                </div>
+            <p>
+              In 2011, during my final year of studying Investment and Financial
+              Risk Management at Cass Business School I applied to sail around
+              the world on the Clipper Race after seeing a poster for it on the
+              London Underground. I had never actually sailed before but it just
+              seemed like such a cool thing to do. Call me crazy but I cancelled
+              my Master’s degree for it due to a clash in dates and instead
+              spent a year at an awesome startup in Amsterdam called Ohpen
+              where I worked as a business analyst developing their cloud-banking
+              platform.
+              <br><br>
+              When I returned from a year of Clipper Race in 2014 I decided I quite
+              liked the whole sailing thing so I embarked on a career in professional
+              yacht racing. I pursued that with all my time and energy for the past
+              three years and travelled all over the world sailing some very cool
+              yachts in some very nice places. It was an incredible ride, provided
+              invaluable life experience, and I wouldn’t trade it for anything.
+              <br><br>
+              Still, in 2017, I reached a point where I felt I had gotten everything
+              I could and wanted out of sailing, so I finally turned my long-standing
+              interest in software development into something concrete and completed
+              a full-stack web development bootcamp at Le Wagon in London. Since
+              finishing the bootcamp in June I have been doing some sailing and
+              teaching myself some more coding skills. Now I’m looking to take on
+              a new challenge at a cool company.
+              <br><br>
+              Check out some more information below. If you're interested in working together, give me a call or shoot
+              me an email and let's grab a coffee!
+              <br>
             </p>
+            <div class="flex-box flex-around" id="contact-details">
+              <div class="contact-info">
+                <i class="fa fa-phone"></i><span> +44 (0)74 0772 1911</span>
+              </div>
+              <div class="contact-info">
+                <i class="fa fa-envelope"></i><span> kk.postma@gmail.com</span>
+              </div>
+            </div>
           </div>
 
           <!-- Professional experience -->
           <div id="experience" class="info-container">
-            <h2>Where I've worked</h2>
+            <h2>Professional experience</h2>
             <!-- Le Wagon -->
             <div class="experience-box">
               <div class="flex-box">
@@ -373,14 +386,6 @@
                   <img class="code-icon" src="images/rspec.png" alt="">
                   <h4>RSpec</h4>
                 </div>
-                <div class="code-box">
-                  <img class="code-icon" src="images/redis.png" alt="">
-                  <h4>Redis</h4>
-                </div>
-                <div class="code-box">
-                  <img class="code-icon" src="images/sidekiq.jpg" alt="">
-                  <h4>Sidekiq</h4>
-                </div>
               </div>
             </div>
           </div>
@@ -496,7 +501,7 @@
 
           <!-- Features -->
           <div id="links" class="info-container">
-            <h2>Other cool stuff</h2>
+            <h2>Cool sailing stuff</h2>
             <div class="links-container">
               <h3>Articles & Blogs</h3>
               <hr>
