--- a/index.html
+++ b/index.html
@@ -58,33 +58,20 @@
           <div id="about" class="info-container">
             <h2>This is me</h2>
             <p>
-              In 2011, during my final year of studying Investment and Financial
-              Risk Management at Cass Business School I applied to sail around
-              the world on the Clipper Race after seeing a poster for it on the
-              London Underground. I had never actually sailed before but it just
-              seemed like such a cool thing to do. Call me crazy but I cancelled
-              my Master’s degree for it due to a clash in dates and instead
-              spent a year at an awesome startup in Amsterdam called Ohpen
-              where I worked as a business analyst developing their cloud-banking
-              platform.
+              In 2017 I finally turned my long-standing interest in coding into
+              something concrete and completed a full-stack web development bootcamp.
+              Now I’m looking to take on a new challenge working on a problem I care
+              about and a solution I believe in.
               <br><br>
-              When I returned from a year of Clipper Race in 2014 I decided I quite
-              liked the whole sailing thing so I embarked on a career in professional
-              yacht racing. I pursued that with all my time and energy for the past
-              three years and travelled all over the world sailing some very cool
-              yachts in some very nice places. It was an incredible ride, provided
-              invaluable life experience, and I wouldn’t trade it for anything.
+              After signing up to sail around the world on the Clipper Race in
+              2013-14 I spent the past three years as a professional sailor
+              focused primarily on offshore racing. Before my career in sailing
+              I also obtained a degree in Investment and Financial Risk Mangement
+              from Cass Business School and worked as a business analyst for a
+              banking software startup in Amsterdam.
               <br><br>
-              Still, in 2017, I reached a point where I felt I had gotten everything
-              I could and wanted out of sailing, so I finally turned my long-standing
-              interest in software development into something concrete and completed
-              a full-stack web development bootcamp at Le Wagon in London. Since
-              finishing the bootcamp in June I have been doing some sailing and
-              teaching myself some more coding skills. Now I’m looking to take on
-              a new challenge at a cool company.
-              <br><br>
-              Check out some more information below. If you're interested in working together, give me a call or shoot
-              me an email and let's grab a coffee!
+              Check out some more information below. If you're interested in working
+              together, give me a call or shoot me an email and let's grab a coffee!
               <br>
             </p>
             <div class="flex-box flex-around" id="contact-details">
