Updates nav menu

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <nav class="nav-container">
         			<ul class="nav-list">
         				<a class="nav-tab active" href="#about"><li>This is me</li></a>
-        				<a href="#experience" class="nav-tab"><li>Professional experience</li></a>
+        				<a href="#experience" class="nav-tab"><li>Experience</li></a>
         				<a href="#stack" class="nav-tab"><li>Tech stack</li></a>
         				<a href="#projects" class="nav-tab"><li>Projects</li></a>
                 <a href="#education" class="nav-tab"><li>Education</li></a>
