Changes tech stack header

--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
           <div id="stack" class="info-container">
             <h2>Tech stack</h2>
             <div class="tech-stack">
-              <h3>What I know</h3>
+              <h3>What I'm comfortable with</h3>
               <hr>
               <div class="code-container">
                 <div class="code-box">
