Changes CV label

--- a/index.html
+++ b/index.html
@@ -472,8 +472,8 @@
               <!-- Conventional CV -->
               <a href="resources/cv_kees_postma.pdf" target="_blank">
                 <div class="download">
-                  <h4>Conventional CV</h3>
-                  <p>Last updated on 18 July 2017</p>
+                  <h4>Professional CV</h3>
+                  <p>Last updated on 4 September 2017</p>
                 </div>
               </a>
               <!-- Sailing CV -->
